--- a/views/result.ejs
+++ b/views/result.ejs
@@ -4,8 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Result</title>
+    <title>결과</title>
   </head>
+  <style>
+    table {
+      width: 500px;
+    }
+    td {
+      padding: 10px;
+      border: 1px solid #666666;
+      text-align: center;
+    }
+  </style>
   <body>
     <table border="2">
       <th>메뉴</th>
