--- a/views/vote.ejs
+++ b/views/vote.ejs
@@ -45,8 +45,8 @@
     <form action="/vote/result" method="GET">
       <input type="submit" value="결과보기" />
     </form>
-    <form action="/vote/menu" method="GET">
-      <input type="submit" value="메뉴" />
+    <form action="/vote/order" method="GET">
+      <input type="submit" value="메뉴고르기" />
     </form>
     <form action="/vote/reset" method="POST">
       <input type="submit" value="초기화" />
