--- a/views/vote.ejs
+++ b/views/vote.ejs
@@ -48,6 +48,9 @@
     <form action="/vote/order" method="GET">
       <input type="submit" value="메뉴고르기" />
     </form>
+    <form action="/vote/order_list" method="GET">
+      <input type="submit" value="메뉴종합" />
+    </form>
     <form action="/vote/reset" method="POST">
       <input type="submit" value="초기화" />
     </form>
